<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tms_ts_subtask</name>
  <version>0.0.0</version>
  <description>The tms_ts_subtask package</description>
  <maintainer email="kasahara@irvs.ait.kyushu-u.ac.jp">Yuichiro Kasahara</maintainer>
  <license>Apache License, Version 2.0</license>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>bsoncxx</depend>
  <depend>mongocxx</depend>
  <depend>geometry_msgs</depend>

  <depend>tms_msg_ts</depend>
  <depend>tms_msg_rp</depend>
  <depend>tms_msg_db</depend>
  <depend>nav2_msgs</depend>
  <depend>com3_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

