<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tms_ts_ts</name>
  <version>1.0.0</version>
  <license>BSD</license>
  <description>The tms_ts_ts package</description>

  <maintainer email="kawamura@ait.kyushu-u.ac.jp">Akihiro Kawamura</maintainer>

  <url type="website">http://robotics.ait.kyushu-u.ac.jp/index-e.html</url>
  <url type="git">https://github.com/irvs/ros_tms</url>

  <author email="itsuka@irvs.ait.kyushu-u.ac.jp">Itsuka Tomoya</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
